feat(theme, resume): add language translation to the components

--- a/documents/compodoc/injectables/ThemeService.html
+++ b/documents/compodoc/injectables/ThemeService.html
@@ -206,7 +206,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="46" class="link-to-prism">src/app/core/theming/theme.service.ts:46</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="45" class="link-to-prism">src/app/core/theming/theme.service.ts:45</a></div>
                             </td>
                         </tr>
 
@@ -282,8 +282,8 @@ by delegating to <code>changeTheme()</code>.</p>
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="108"
-                                    class="link-to-prism">src/app/core/theming/theme.service.ts:108</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="106"
+                                    class="link-to-prism">src/app/core/theming/theme.service.ts:106</a></div>
                         </td>
                     </tr>
 
@@ -293,7 +293,7 @@ by delegating to <code>changeTheme()</code>.</p>
                         <div class="io-description"><p>Changes the active theme of the application.</p>
 <p>Handles updating the DOM body class, internal state, and saving
 the selected theme to localStorage.</p>
-<b>Example :</b><div><pre class="line-numbers"><code class="language-none">                     mapped to the &quot;theme.model&quot; (source code domain).</code></pre></div></div>
+</div>
 
                             <div class="io-description">
                                 <b>Parameters :</b>
@@ -321,8 +321,7 @@ the selected theme to localStorage.</p>
 
                                             <td>
                                                     <ul>
-<li>The new <code>Theme</code> to apply. An instance of the Entity Object &quot;Theme&quot; (model domain),
-  mapped to the &quot;theme.model&quot; (source code domain).</li>
+<li>The new <code>Theme</code> to apply. An instance of the Entity Object &quot;Theme&quot; (model domain), mapped to the &quot;theme.model&quot; (source code domain).</li>
 </ul>
 
                                             </td>
@@ -363,8 +362,8 @@ the selected theme to localStorage.</p>
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="71"
-                                    class="link-to-prism">src/app/core/theming/theme.service.ts:71</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="70"
+                                    class="link-to-prism">src/app/core/theming/theme.service.ts:70</a></div>
                         </td>
                     </tr>
 
@@ -408,8 +407,8 @@ the selected theme to localStorage.</p>
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="94"
-                                    class="link-to-prism">src/app/core/theming/theme.service.ts:94</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="93"
+                                    class="link-to-prism">src/app/core/theming/theme.service.ts:93</a></div>
                         </td>
                     </tr>
 
@@ -489,8 +488,8 @@ If no match is found, this method will throw at runtime.</p>
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="80"
-                                    class="link-to-prism">src/app/core/theming/theme.service.ts:80</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="79"
+                                    class="link-to-prism">src/app/core/theming/theme.service.ts:79</a></div>
                         </td>
                     </tr>
 
@@ -537,7 +536,7 @@ If no match is found, this method will throw at runtime.</p>
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="46" class="link-to-prism">src/app/core/theming/theme.service.ts:46</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="45" class="link-to-prism">src/app/core/theming/theme.service.ts:45</a></div>
                         </td>
                     </tr>
 
@@ -580,7 +579,7 @@ If no match is found, this method will throw at runtime.</p>
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="33" class="link-to-prism">src/app/core/theming/theme.service.ts:33</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="32" class="link-to-prism">src/app/core/theming/theme.service.ts:32</a></div>
                         </td>
                     </tr>
 
@@ -613,7 +612,6 @@ import { DOCUMENT } from &#x27;@angular/common&#x27;;
  * This service handles:
  * - Managing the list of available themes.
  * - Persisting the user&#x27;s theme choice in localStorage.
-
  *
  * @export
  * @class ThemeService
@@ -704,8 +702,7 @@ export class ThemeService {
    * Handles updating the DOM body class, internal state, and saving
    * the selected theme to localStorage.
    *
-   * @param {Theme} theme - The new &#x60;Theme&#x60; to apply. An instance of the Entity Object &quot;Theme&quot; (model domain),
-   *                          mapped to the &quot;theme.model&quot; (source code domain).
+   * @param {Theme} theme - The new &#x60;Theme&#x60; to apply. An instance of the Entity Object &quot;Theme&quot; (model domain), mapped to the &quot;theme.model&quot; (source code domain).
    * @returns {void}
    */
   public changeTheme(theme: Theme): void {
