docs(rad,sdd,odd): update system design docs with routing subsystem feedback

--- a/documents/compodoc/coverage.html
+++ b/documents/compodoc/coverage.html
@@ -262,6 +262,78 @@
                 <span class="coverage-count">(8/8)</span>
             </td>
         </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./components/BlogPost.html">src/app/pages/blog/blog-post/blog-post.ts</a>
+            </td>
+            <td>component</td>
+            <td>BlogPost</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/1)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./components/Blog.html">src/app/pages/blog/blog.ts</a>
+            </td>
+            <td>component</td>
+            <td>Blog</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/1)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./components/Docs.html">src/app/pages/docs/docs.ts</a>
+            </td>
+            <td>component</td>
+            <td>Docs</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/1)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./components/Home.html">src/app/pages/home/home.ts</a>
+            </td>
+            <td>component</td>
+            <td>Home</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/1)</span>
+            </td>
+        </tr>
+        <tr class="very-good">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./components/ProjectDetail.html">src/app/pages/projects/project-detail/project-detail.ts</a>
+            </td>
+            <td>component</td>
+            <td>ProjectDetail</td>
+            <td align="right" data-sort="100">
+                <span class="coverage-percent">100 %</span>
+                <span class="coverage-count">(4/4)</span>
+            </td>
+        </tr>
+        <tr class="very-good">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./components/Projects.html">src/app/pages/projects/projects.ts</a>
+            </td>
+            <td>component</td>
+            <td>Projects</td>
+            <td align="right" data-sort="100">
+                <span class="coverage-percent">100 %</span>
+                <span class="coverage-count">(3/3)</span>
+            </td>
+        </tr>
         <tr class="very-good">
             <td>
                 <!-- miscellaneous -->
